rust/errors.txt
    Checking subtle v2.6.1
    Checking typenum v1.19.0
    Checking cpufeatures v0.2.17
   Compiling bytes v1.11.1
   Compiling windows-link v0.2.1
   Compiling cfg-if v1.0.4
   Compiling windows-sys v0.61.2
   Compiling getrandom v0.4.1
   Compiling prost v0.14.3
    Checking generic-array v0.14.7
    Checking zerocopy v0.8.39
   Compiling prost-types v0.14.3
    Checking crypto-common v0.1.7
    Checking block-buffer v0.10.4
    Checking digest v0.10.7
    Checking block-padding v0.3.3
   Compiling tempfile v3.26.0
    Checking inout v0.1.4
    Checking cipher v0.4.4
   Compiling log v0.4.29
    Checking zeroize v1.8.2
    Checking universal-hash v0.5.1
    Checking getrandom v0.3.4
   Compiling prost-build v0.14.3
    Checking serde_core v1.0.228
    Checking futures-core v0.3.32
    Checking opaque-debug v0.3.1
    Checking futures-sink v0.3.32
    Checking futures-channel v0.3.32
    Checking polyval v0.6.2
   Compiling wa-rs-proto v0.2.0
    Checking curve25519-dalek v4.1.3
    Checking serde v1.0.228
    Checking rand_core v0.9.5
    Checking sha2 v0.10.9
    Checking hmac v0.12.1
    Checking scopeguard v1.2.0
    Checking ppv-lite86 v0.2.21
    Checking futures-io v0.3.32
    Checking pin-project-lite v0.2.16
    Checking slab v0.4.12
    Checking smallvec v1.15.1
    Checking futures-task v0.3.32
    Checking memchr v2.8.0
    Checking rand_chacha v0.9.0
    Checking parking_lot_core v0.9.12
    Checking lock_api v0.4.14
    Checking num-traits v0.2.19
    Checking futures-util v0.3.32
    Checking libc v0.2.182
    Checking ghash v0.5.1
    Checking ctr v0.9.2
    Checking aes v0.8.4
    Checking aead v0.5.2
    Checking base64ct v1.8.3
    Checking signature v2.2.0
    Checking either v1.15.0
    Checking aes-gcm v0.10.3
    Checking password-hash v0.5.0
    Checking itertools v0.14.0
    Checking ed25519 v2.2.3
    Checking derive_more v2.1.1
    Checking thiserror v2.0.18
    Checking chrono v0.4.44
    Checking pyo3-ffi v0.21.2
    Checking parking_lot v0.12.5
    Checking memoffset v0.9.1
    Checking futures-executor v0.3.32
    Checking portable-atomic v1.13.1
    Checking rand v0.9.2
    Checking rand_chacha v0.3.1
    Checking hkdf v0.12.4
    Checking x25519-dalek v2.0.1
    Checking cbc v0.1.2
    Checking sha1 v0.10.6
    Checking hex v0.4.3
    Checking arrayref v0.3.9
    Checking unindent v0.2.4
    Checking uuid v1.21.0
    Checking rand v0.8.5
    Checking pyo3 v0.21.2
    Checking futures v0.3.32
    Checking ed25519-dalek v2.2.0
    Checking pbkdf2 v0.12.2
    Checking wa-rs-libsignal v0.2.0
    Checking pywa-crypto v0.1.0 (C:\Users\Arvy Kairi\Desktop\whatsapp\pywa)
error[E0599]: no function or associated item named `deserialize` found for struct `wa_rs_libsignal::protocol::PreKeySignalMessage` in the current scope
   --> rust\src\signal.rs:268:40
    |
268 |     let message = PreKeySignalMessage::deserialize(ciphertext)
    |                                        ^^^^^^^^^^^ function or associated item not found in `wa_rs_libsignal::protocol::PreKeySignalMessage`
    |
note: if you're trying to build a new `wa_rs_libsignal::protocol::PreKeySignalMessage`, consider using `wa_rs_libsignal::protocol::PreKeySignalMessage::new` which returns `Result<wa_rs_libsignal::protocol::PreKeySignalMessage, SignalProtocolError>`
   --> C:\Users\Arvy Kairi\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wa-rs-libsignal-0.2.0\src\protocol\protocol.rs:250:5
    |
250 | /     pub fn new(
251 | |         message_version: u8,
252 | |         registration_id: u32,
253 | |         pre_key_id: Option<PreKeyId>,
...   |
257 | |         message: SignalMessage,
258 | |     ) -> Result<Self> {
    | |_____________________^
help: there is a method `serialized` with a similar name, but with different arguments
   --> C:\Users\Arvy Kairi\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wa-rs-libsignal-0.2.0\src\protocol\protocol.rs:320:5
    |
320 |     pub fn serialized(&self) -> &[u8] {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0061]: this function takes 8 arguments but 4 arguments were supplied
   --> rust\src\signal.rs:271:30
    |
271 |       let plaintext = block_on(message_decrypt_prekey(
    |  ______________________________^^^^^^^^^^^^^^^^^^^^^^-
272 | |         &message,
273 | |         &address,
274 | |         &mut session_store,
275 | |         &mut identity_store,
276 | |     ))
    | |_____- multiple arguments are missing
    |
note: function defined here
   --> C:\Users\Arvy Kairi\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wa-rs-libsignal-0.2.0\src\protocol\session_cipher.rs:221:14
    |
221 | pub async fn message_decrypt_prekey<R: Rng + CryptoRng>(
    |              ^^^^^^^^^^^^^^^^^^^^^^
help: provide the arguments
    |
271 |     let plaintext = block_on(message_decrypt_prekey(
...
275 |         &mut identity_store,
276 ~         /* &mut dyn wa_rs_libsignal::protocol::PreKeyStore */,
277 +         /* &dyn wa_rs_libsignal::protocol::SignedPreKeyStore */,
278 +         /* csprng */,
279 +         /* UsePQRatchet */,
280 ~     ))
    |

error[E0599]: no function or associated item named `deserialize` found for struct `wa_rs_libsignal::protocol::SignalMessage` in the current scope
   --> rust\src\signal.rs:299:34
    |
299 |     let message = SignalMessage::deserialize(ciphertext)
    |                                  ^^^^^^^^^^^ function or associated item not found in `wa_rs_libsignal::protocol::SignalMessage`
    |
note: if you're trying to build a new `wa_rs_libsignal::protocol::SignalMessage`, consider using `wa_rs_libsignal::protocol::SignalMessage::new` which returns `Result<wa_rs_libsignal::protocol::SignalMessage, SignalProtocolError>`
   --> C:\Users\Arvy Kairi\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wa-rs-libsignal-0.2.0\src\protocol\protocol.rs:77:5
    |
 77 | /     pub fn new(
 78 | |         message_version: u8,
 79 | |         mac_key: &[u8],
 80 | |         sender_ratchet_key: PublicKey,
...   |
 85 | |         receiver_identity_key: &IdentityKey,
 86 | |     ) -> Result<Self> {
    | |_____________________^
help: there is a method `serialized` with a similar name, but with different arguments
   --> C:\Users\Arvy Kairi\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wa-rs-libsignal-0.2.0\src\protocol\protocol.rs:132:5
    |
132 |     pub fn serialized(&self) -> &[u8] {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0061]: this function takes 8 arguments but 4 arguments were supplied
   --> rust\src\signal.rs:302:30
    |
302 |       let plaintext = block_on(message_decrypt(
    |  ______________________________^^^^^^^^^^^^^^^-
303 | |         &message,
304 | |         &address,
305 | |         &mut session_store,
306 | |         &mut identity_store,
307 | |     ))
    | |_____- multiple arguments are missing
    |
note: function defined here
   --> C:\Users\Arvy Kairi\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wa-rs-libsignal-0.2.0\src\protocol\session_cipher.rs:186:14
    |
186 | pub async fn message_decrypt<R: Rng + CryptoRng>(
    |              ^^^^^^^^^^^^^^^
help: provide the arguments
    |
302 |     let plaintext = block_on(message_decrypt(
...
306 |         &mut identity_store,
307 ~         /* &mut dyn wa_rs_libsignal::protocol::PreKeyStore */,
308 +         /* &dyn wa_rs_libsignal::protocol::SignedPreKeyStore */,
309 +         /* csprng */,
310 +         /* UsePQRatchet */,
311 ~     ))
    |

Some errors have detailed explanations: E0061, E0599.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `pywa-crypto` (lib) due to 4 previous errors
